kubernetes/apps/default/plex/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: default
  labels:
    app: plex
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
        - name: plex
          image: lscr.io/linuxserver/plex:1.43.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 32400
              protocol: TCP
          resources:
            requests:
              gpu.intel.com/i915: "1"
              cpu: 1000m
              memory: "7.5Gi"
            limits:
              gpu.intel.com/i915: "1"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: movies
              mountPath: /data/movies
            - name: tv
              mountPath: /data/tv
            - name: zfstranscode
              mountPath: /scratch
            - name: lily
              mountPath: /lily_gcs_cheers
            - name: abbie
              mountPath: /abbie
          startupProbe:
            httpGet:
              path: /identity
              port: http
              scheme: HTTPS
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /identity
              port: http
              scheme: HTTPS
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /identity
              port: http
              scheme: HTTPS
            failureThreshold: 5
            periodSeconds: 30
          securityContext:
            privileged: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: plex-config-pvc
        - name: movies
          persistentVolumeClaim:
            claimName: media-movies-pvc
        - name: tv
          persistentVolumeClaim:
            claimName: media-tv-pvc
        - name: zfstranscode
          persistentVolumeClaim:
            claimName: plex-zfstranscode-pvc
        - name: lily
          persistentVolumeClaim:
            claimName: plex-lily-pvc
        - name: abbie
          persistentVolumeClaim:
            claimName: plex-abbie-pvc
